log
Thu 28 Mar 2024 02:03:39 PM UTC: 
 tests:  0|6
total_score: 0/70
6218ca1
Thu 28 Mar 2024 02:06:57 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7d16e90
Thu 28 Mar 2024 02:09:18 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
1470605
Thu 28 Mar 2024 02:10:30 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
3c1a3d3
Thu 28 Mar 2024 02:14:09 PM UTC: 
 list.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
8d5bf30
Thu 28 Mar 2024 02:15:35 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
0e1c175
Thu 28 Mar 2024 02:21:15 PM UTC: 
 list.c | 24 +++++++++++++++++++-----
 1 file changed, 19 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 45/70
5c4b85c
Thu 28 Mar 2024 02:28:39 PM UTC: 
 list.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
cf26c5c
Thu 28 Mar 2024 02:32:48 PM UTC: 
 list.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:143:12: error: unused variable ‘data’ [-Werror=unused-variable]
  143 |     void * data = list->current->data;
      |            ^~~~
list.c:162:10: error: ‘data’ undeclared (first use in this function)
  162 |   return data;
      |          ^~~~
list.c:162:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:163:1: error: control reaches end of non-void function [-Werror=return-type]
  163 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4334300
Thu 28 Mar 2024 02:36:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
dbf0b20
